# hermes-delegate-routing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CI_E2E_TESTING.md  DESIGN.md
hermes_delegate_routing/: __init__.py  _state.py  patches.py  resolver.py
tests/: conftest.py  test_apply_patches.py  test_capture_apply.py  test_e2e_routing.py  test_integration_smoke.py  test_resolver.py  test_schema_cache_invalidation.py  test_schema_seam.py
