[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-delegate-routing"
version = "0.1.1"
description = "Hermes Agent plugin: explicit per-task model/provider routing for delegate_task (fork-free)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "b3nw", email = "b3nw@duck.com" }]
keywords = ["hermes-agent", "plugin", "delegate", "subagent", "model-routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# NOTE: no runtime dependency on hermes-agent — it is the HOST that loads this
# plugin, not a package dependency. The plugin imports host internals lazily.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.entry-points."hermes_agent.plugins"]
# The loader (hermes_cli/plugins.py:_scan_entry_points) imports this module and
# calls its register(ctx). Value is the importable module that defines register().
delegate_routing = "hermes_delegate_routing"

[project.urls]
Homepage = "https://github.com/b3nw/hermes-delegate-routing"
Repository = "https://github.com/b3nw/hermes-delegate-routing"
Issues = "https://github.com/b3nw/hermes-delegate-routing/issues"
Changelog = "https://github.com/b3nw/hermes-delegate-routing/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["hermes_delegate_routing"]

[tool.setuptools.package-data]
hermes_delegate_routing = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["hermes_delegate_routing"]
warn_unused_ignores = true
no_implicit_optional = true

# Host internals (hermes_cli.*, tools.*) are imported lazily and are not a
# build/runtime dependency — they only exist inside a live hermes-agent. Don't
# fail type-checking on their absence.
[[tool.mypy.overrides]]
module = ["hermes_cli.*", "tools.*"]
ignore_missing_imports = true
